# MossService

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  test.Dockerfile  test.py  test.sh  test_bash.sh
.github/workflows/: pylint.yml  test-prod.yml
service/: errors.py  moss.py  utils.py
src/: moss
