[tool.poetry]
name = "mossservice"
version = "0.1.0"
description = ""
authors = ["vincentinttsh <vincentinttsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
validators = "^0.18.2"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
